Fix word wrap

--- a/src/main/webapp/assets/public/css/custom-style.css
+++ b/src/main/webapp/assets/public/css/custom-style.css
@@ -763,6 +763,7 @@
 		}
 		.textJustify{
 			text-align: justify;
+			word-wrap: break-word;
 		}
 		.QuoteDescription{
 			width:100%;
